plugins {
    id "net.fabricmc.fabric-loom" version "${loom_version}"
}

version = project.mod_version
group = project.maven_group

repositories {
    maven {
        name = "Meteor Dev Releases"
        url = "https://maven.meteordev.org/releases"
    }
    maven {
        name = "Meteor Dev Snapshots"
        url = "https://maven.meteordev.org/snapshots"
    }
}

dependencies {
    // Fabric
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    // mappings loom.officialMojangMappings()
//    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    implementation "net.fabricmc:fabric-loader:${project.loader_version}"
    implementation 'org.java-websocket:Java-WebSocket:1.5.4'
    include 'org.java-websocket:Java-WebSocket:1.5.4'

    // Meteor
    implementation("meteordevelopment:meteor-client:${project.minecraft_version}-SNAPSHOT")
    compileOnly 'org.meteordev:starscript:0.2.5'
}

java {
    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
    // if it is present.
    // If you remove this line, sources will not be generated.
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

processResources {
    filesMatching("fabric.mod.json") {
        expand "version": project.version, "mc_version": project.minecraft_version
    }
}

jar {
    def projectName = project.name
    inputs.property "projectName", projectName
    def archivesBaseName = project.archives_base_name

    from("LICENSE") {
        rename { "${it}_$projectName"}
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.encoding("UTF-8")
}
